# BasePython

./: .gitignore  README.md  requirements-dev.txt  run_tests.yml
lessons/lesson.13/: .dockerignore  01_create_table.py  02_classic_model.py  03_declarative_model.py  04_orm_and_relations.py  Dockerfile  Pipfile  README.md  api.py  app.py  crud.py  db_helper.py  demo-config.ini  demo_01.py  demo_aiohttp.py  demo_combinations.py  demo_functools.py  demo_os.py  demo_pathlib.py  dependencies.py  functools_features.py  index.html  items_views.py  itertools_features.py  main.py  mini_app.py  my_module.py  os_features.py  pathlib_features.py  process_ini.py  pyproject.toml  requirements.txt  schemas.py  solver.py  some_queries.sql  test_api.py  test_db_helper.py  test_solver.py
lessons/lesson.14/: .dockerignore  1_os_features.py  2_pathlib_features.py  3_functools_features.py  4_itertools_features.py  Dockerfile  Pipfile  alembic.ini  config.py  demo_mongo.py  demo_pg.py  demo_redis.py  docker-compose.yaml  docker-compose.yml  fsm.py  http_examples.py  items_views.py  main.py  pyproject.toml  queries.sql  requirements.txt  webhook.py
lessons/lesson.17/: Dockerfile  Pipfile  README.md  alembic.ini  app.py  client_proxy.py  cls_bases_example.py  config.py  data.csv  demo_1_create_table.py  demo_2_declarative_base.py  demo_3_queries.py  docker-compose.yaml  find_face_video.py  find_faces.py  fsm.py  fsm_example.py  http_client.py  http_client_post.py  http_server.py  http_server_1.py  http_server_2.py  http_server_3.py  img_np.py  main.py  my_proxy.py  orm0_raw_sql.py  orm1_create_table.py  orm2_declarative_base.py  orm3_tables_and_queries.py  orm_1_create_table.py  orm_2_declarative_base.py  orm_3_queries.py  proxy_server.py  pyproject.toml  queries.sql  requirements.txt  simple_http_server1.py  simple_http_server2.py  simple_http_server3.py  (+17 more)
lessons/lesson.19/: .dockerignore  Dockerfile  README.md  about.html  alembic.ini  app.py  boot.css  bs_style.css  config.py  countries.csv  countries.json  countries.pickle  demo_1_create_table.py  demo_2_declarative.py  demo_aiohttp.py  demo_asyncio.py  demo_queries.py  demo_sync_async.py  docker-compose.yml  fines.json  index.html  index2.html  js1.js  main.py  page2.html  pricing.html  pyproject.toml  queries.sql  requirements.txt  step_1.py  step_10.py  step_11.py  step_12.py  step_13.py  step_2.py  step_3.py  step_4.py  step_5.py  step_6.py  step_7.py  (+5 more)
lessons/lesson.21/: .gitignore  Dockerfile  README.md  alembic.ini  app.py  common.py  config.py  demo_1_create_table.py  demo_2_declarative_base.py  demo_queries.py  demo_session_query.py  docker-compose.yaml  locustfile_async.py  locustfile_sync.py  main.py  main_db_async.py  migrations.sql  models.py  postgres.env  pyproject.toml  queries.sql  requirements-dev.txt  requirements-tests.txt  requirements.txt  step_1.py  step_2.py  step_3.py  step_4.py  step_5.py  step_6.py  step_7.py  step_8.py
lessons/lesson.22/: README.md  alembic.ini  app.py  common.py  config.py  demo_db_async.py  demo_queries.py  docker-compose.yaml  locustfile_async_test.py  locustfile_sync.py  locustfile_sync_test.py  main.py  main_sync.py  new-migration.sql  pyproject.toml  queries.sql  requirements-dev.txt  requirements-test.txt  requirements.txt  step_0.py  step_1.py  step_2.py  step_3.py  step_4.py  step_5.py  step_6.py  step_7.py
lessons/lesson.23/: Dockerfile  Dockerfile-poetry  Dockerfile_poetry  README.md  alembic.ini  app.py  common.py  config.py  create-users.py  demo.py  main.py  main_crud_sync.py  pyproject.toml  queries.sql  requirements.txt
lessons/lesson.25/: Dockerfile  README.md  __init__.py  alembic.ini  app.py  config.py  database.py  demmo_queries.py  demo.py  demo_0_check_engine.py  demo_1_create_table.py  demo_2_query_table.py  demo_3_declarative_base.py  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml  queries.sql  requirements-dev.txt  requirements.txt  sql-migrations.sql  vet_clinic.db
lessons/lesson.26/: 00-example-sqlite.py  00-sqlite-db-intro.py  00_connection.py  00_connection_and_raw_sql.py  01-create-table.py  01-sqla-raw-queries.py  01_colour_sync_restourant.py  01_connection_to_file.py  01_db_table.py  02-declarative.py  02-sqla-table-queries.py  02_colour_async_restourant_tasks.py  02_orm.py  02_write_to_file.py  03-sqla-metadata-reflect.py  03_colour_async_restourant_caroutines.py  03_table.py  04-sqla-orm.py  04_user_orm.py  04_weather_sync.py  05_weather_asyncio_with.py  Dockerfile  app.py  common.py  config.py  docker-compose.yaml  docker-compose.yml  example-sqlite.py  example.py  example_0_sync.py  example_1_async.py  example_2_create_task.py.py  example_3_task_groups.py  main.py  pyproject.toml  queries.sql  requirements.txt  sqla_0_raw_queries.py  sqla_1_table_queries.py  sqla_2_orm_and_sess.py  (+10 more)
lessons/lesson.27/: 01_db_table.py  Dockerfile  README.md  alembic.ini  app.py  config.py  demo_queries.py  docker-compose.check.yaml  docker-compose.yaml  docker-compose.yml  entrypoint.sh  example_aiohttp_async_queries.py  main.py  prestart.sh  pyproject.toml  queries.py  queries.sql  requirements.txt  stuff.py
lessons/lesson.28/: README.md  alembic.ini  app.py  config.py  database.py  docker-compose.yml  main.py  models.py  pet_router.py  pyproject.toml  queries.sql  record_router.py  requirements.txt  schemas.py  services.py  vet_clinic.db
lessons/lesson.29/: Dockerfile-local  README.md  alembic.ini  app-example.env  app.env  app.py  config.py  demo_01_async_calls.py  demo_03_gather.py  demo_dataclasses.py  demo_fastapi.py  demo_pydantic.py  docker-compose.yaml  docker-compose.yml  main.py  prestart-dev.sh  pyproject.toml  queries.sql  requirements.txt  slow-service.py
lessons/lesson.30/: .env.template  README.md  alembic.ini  app.py  common.py  config.py  demo_00_sync_calls.py  demo_01_async_calls.py  demo_01_sync_calls.py  demo_02_coro.py  demo_03_gather.py  demo_04_task_group.py  demo_05_cycles.py  demo_05_timeout.py  demo_bs4.py  docker-compose.yaml  main.py  myspider.py  pyproject.toml  quotes.jl  quotes.json  requirements.txt
(+4496 files in other folders)
