[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = {extras = ["standard"], version = "^0.30.4"}
pydantic = {extras = ["email"], version = "^2.8.2"}
jinja2 = "^3.1.4"
gunicorn = "^22.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.3.2"

