[tool.poetry]
name = "otus-venv-poetry"
version = "0.1.0"
description = ""
authors = ["Stanislav <stanislav3@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
django = "^5.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^22.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
