[project]
name = "otus-poetry-2025-07"
version = "0.1.0"
description = ""
authors = [
    {name = "stanislav"}
]
readme = "README.md"
requires-python = "==3.9"
dependencies = [
    "django (>=5.2.7,<6.0.0)",
    "fastapi (>=0.119.1,<0.120.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "~8.4.2"
pytest = ">=8.4.2,<=8.5.0"
pytest-mock = "^3.15.1"


[tool.poetry.group.lint.dependencies]
ruff = "^0.14.1"
ruff = ">=0.14.1,<1.0.0"

