[project]
name = "otus-m3-2025-09"
version = "0.1.0"
description = ""
authors = [
    {name = "Admin"}
]

requires-python = ">=3.11"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
