[tool.poetry]
name = "fastapi-greet-app"
version = "0.1.0"
description = ""
authors = ["Suren Khorenyan <surenkhorenyan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
pydantic = {extras = ["email"], version = "^2.5.3"}
uvicorn = {extras = ["standard"], version = "^0.26.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.27"}
psycopg = "^3.1.18"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
httpx = "^0.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
