[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = "^0.114.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic = {extras = ["email"], version = "^2.8.2"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.34"}
psycopg = "^3.2.1"
alembic = "^1.13.2"
gunicorn = "^23.0.0"
asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.2.2"
locust = "^2.31.5"
requests = "^2.32.3"
aiohttp = "^3.10.5"

