[project]
name = "blog-app-2025-03"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.1",
    "gunicorn>=23.0.0",
    "psycopg>=3.2.9",
    "requests>=2.32.4",
    "sqlalchemy[asyncio]>=2.0.41",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "locust>=2.37.14",
    "psycopg[binary]>=3.2.9",
]
