[project]
name = "blog-app-2025-09"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "alembic>=1.18.1",
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.128.5",
    "gunicorn>=25.0.3",
    "pg8000>=1.31.5",
    "psycopg[binary]>=3.3.2",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "sqlalchemy[asyncio]>=2.0.45",
    "uvicorn>=0.40.0",
    "uvicorn-worker>=0.4.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "locust>=2.43.2",
]
