[project]
name = "otus-django-2025-07"
version = "0.1.0"
description = ""
authors = [
    {name = "Stanislav"}
]
readme = "README.md"
requires-python = ">=3.13, <4"
dependencies = [
    "faker (>=39.0.0,<40.0.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "django (>=5.0,<6.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"
pytest-mock = "^3.15.1"
pytest-django = "^4.11.1"

