[project]
name = "otus-django-2024-09"
version = "0.1.0"
description = ""
authors = [
    {name = "Stanislav",email = "stanislav3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "faker (>=37.0.0,<38.0.0)",
    "celery[redis] (>=5.4.0,<6.0.0)",
    "django-celery-results (>=2.5.1,<3.0.0)",
    "django-celery-beat (>=2.7.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-django = "^4.10.0"
pytest-mock = "^3.14.0"
beautifulsoup4 = "^4.13.3"

