[project]
name = "otus-django-2025-05"
version = "0.1.0"
description = ""
authors = [
    {name = "Stanislav"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "django (>=5.2.7,<6.0.0)",
    "faker (>=37.11.0,<38.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
    "celery[redis] (>=5.5.3,<6.0.0)",
    "django-celery-results (>=2.6.0,<3.0.0)",
    "django-celery-beat (>=2.8.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.pytest.dependencies]
pytest-django = "^4.11.1"
pytest-mock = "^3.15.1"
pytest = "^8.4.2"

