[tool.poetry]
name = "shop"
version = "0.1.0"
description = ""
authors = ["Suren Khorenyan <surenkhorenyan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.5"
psycopg = "^3.1.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
