[project]
name = "otus-django-2024-11"
version = "0.1.0"
description = ""
authors = [
    {name = "Stanislav",email = "stanislav3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2,<6.0)",
    "faker (>=37.1.0,<38.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-django = "^4.11.1"
pytest-mock = "^3.14.0"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.1.1"
pylint = "^3.3.7"

[tool.poetry]
package-mode = false
