[project]
name = "otus-django-2025-01"
version = "0.1.0"
description = ""
authors = [
    {name = "Stanislav",email = "stanislav3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.3,<6.0.0)",
    "faker (>=37.4.0,<38.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"
pytest-mock = "^3.14.1"
pytest-django = "^4.11.1"
beautifulsoup4 = "^4.13.4"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"
pytest-cov = "^6.2.1"

