[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.37"}
alembic = "^1.14.1"
psycopg = "^3.2.4"
fastapi = "^0.115.8"
pydantic = {extras = ["email"], version = "^2.10.6"}
uvicorn = "^0.34.0"
gunicorn = "^23.0.0"
asyncpg = "^0.30.0"
aiohttp = "^3.11.11"
pydantic-settings = "^2.7.1"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
httpx = "^0.28.1"
