[project]
name = "otus-django-2025-03"
version = "0.1.0"
description = ""
authors = [
    {name = "Stanislav",email = "stanislav3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.5,<6.0.0)",
    "faker (>=37.6.0,<38.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.2"
pytest-mock = "^3.15.0"
pytest-django = "^4.11.1"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.8"
black = "^25.1.0"
pytest-cov = "^7.0.0"
python-dotenv = "^1.1.1"

[tool.poetry]
package-mode = false
